# Dashboard-for-road-marking

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DASHBOARD_UI_ARCHITECTURE.md  Makefile  README.md  config.json  main.cpp
app/: AppController.cpp  AppController.hpp  SynchronizationMonitor.cpp  SynchronizationMonitor.hpp
config/: AppConfig.cpp  AppConfig.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp
domain/: LaneState.cpp  LaneState.h  MarkingObject.cpp  MarkingObject.h  Warning.cpp  Warning.h  WarningEngine.cpp  WarningEngine.h
logger/: Logger.cpp  Logger.hpp  LoggerMacros.hpp
network/: ConnectionManager.cpp  ConnectionManager.h  TcpReaderWorker.cpp  TcpReaderWorker.h
parser/: proto_parser.cpp  proto_parser.h
ui/: MainWindow.cpp  MainWindow.hpp
videomanager/base/: AbstractVideoWidget.hpp
videomanager/interfaces/: IFrameHandle.hpp  IVideoFrameProcessor.hpp  IVideoFrameProvider.hpp
videowidget/: NetworkVideoWidget.hpp
videowidget/base/: AbstractVideoWidget.cpp  AbstractVideoWidget.hpp
videowidget/interfaces/: IFrameHandle.hpp  IVideoFrameProcessor.hpp  IVideoFrameProvider.cpp  IVideoFrameProvider.hpp
videowidget/processors/: MarkingOverlayProcessor.cpp  MarkingOverlayProcessor.hpp
videowidget/src/: BasicFrameHandle.cpp  BasicFrameHandle.hpp  QtMultimediaVideoProvider.cpp  QtMultimediaVideoProvider.hpp
videowidget/widgets/: NetworkVideoWidget.cpp  NetworkVideoWidget.hpp
viewmodels/: LaneStateViewModel.cpp  LaneStateViewModel.h  MarkingObjectListModel.cpp  MarkingObjectListModel.h  WarningListModel.cpp  WarningListModel.h
